<resources>
    <string name="app_name">GameStores</string>
    <string name="title_here">Title here</string>
    <string name="todo">TODO</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="download">Download</string>
    <string name="available">Also available</string>
    <string name="provider">Provider</string>
    <string name="want">Want</string>
    <string name="minimum_system_requirements">Minimum system requirements</string>
    <string name="os">os: </string>
    <string name="processor">processor: </string>
    <string name="memory">memory: </string>
    <string name="graphics">graphics: </string>
    <string name="storage">storage: </string>

    <!--    tab bar detail game screen-->
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="gameplay">Gameplay</string>
    <string name="news">News</string>
    <string name="guide">Guide</string>
    <string name="discussion">Discussion</string>
    <string name="share">share</string>
    <string name="report">report</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="search_game">search game</string>
    <string name="top_charts">Top charts</string>
    <string name="upcoming">Upcoming</string>
    <string name="listgame">Listgame</string>
</resources>